# oxblood-prometheus

./: README.md  main.c
base_node/: CMakeLists.txt  prj.conf
base_node/boards/: m5stack_core2_esp32_procpu.overlay
base_node/src/: audio_out.c  audio_out.h  imu_packet.h  json_serial.c  json_serial.h  main.c  mobile_link.c  mobile_link.h  nus_client.c  nus_client.h  serial_audio.c  serial_audio.h  ui_display.c  ui_display.h
bridge-testing/: bridge.py  index.html
camera-zephyr/: CMakeLists.txt  Kconfig  prj.conf
camera-zephyr/src/: colour_detect.c  colour_detect.h  main.c  wifi_mqtt.c  wifi_mqtt.h
mobile-p1/: prj.conf
mobile-p1/src/: main.c
mobile-p2/: prj.conf
mobile-p2/src/: main.c
pc_game/: game.js  index.html  liver_backend.py  style.css
pc_game/mobile-p1/: CMakeLists.txt  prj.conf
pc_game/mobile-p2/: CMakeLists.txt  prj.conf
